--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -248,8 +248,9 @@
                 <a href="https://practicum.yandex.com/data-scientist/" target="_blank">Data scientist</a>,
                 I also participate in different competitions on Kaggle.com and
                 improve my skills on other platforms.
-                I’m currently studying on <a href="https://developers.institute/en/portfolios/best-coding-bootcamp-tel-aviv-israel/"
-                target="_blank">developers.institute</a>
+                I’m currently studying on <a
+                  href="https://developers.institute/en/portfolios/best-coding-bootcamp-tel-aviv-israel/"
+                  target="_blank">developers.institute</a>
                 <br>
                 You can find my CV <a
                   href="https://github.com/Chikitonik/Chikitonik/blob/main/Resume-Roman-Kholodkov.pdf"
@@ -281,17 +282,16 @@
           science</button>
       </div>
     </div>
-    <!-- All works -->
-    <!-- <div id="Data science" class="row tabcontent active justify-content-center"> -->
+    <!-- #region works -->
     <div class="row m-3">
       <!-- work card -->
       <div class="row m-0 p-0 gallery-card tablink-data-science active hidden"
         style="background-image: url('img/projects/house-prices-kaggle.png')">
         <div class="row h-100 card-content d-flex align-items-start flex-column">
-          <div class="row align-items-start text-center">
+          <div class="row mx-2 align-items-start text-center">
             <div class="h3 col-12 card-header">House prices prediction</div>
           </div>
-          <div class="row align-items-end mt-auto p-2 justify-content-center">
+          <div class="row align-items-end mt-auto p-2 justify-content-center mx-auto">
             <div id="house-prices-kaggle" class="col-12 button-gallery-card" data-toggle="modal"
               data-target="#modalCenter" onclick=ButtonCardClick(this.id)>
               <p>more</p>
@@ -312,10 +312,10 @@
       <div class="row m-0 p-0 gallery-card tablink-data-science active hidden"
         style="background-image: url('img/projects/taxi-orders-prediction.png')">
         <div class="row h-100 card-content d-flex align-items-start flex-column">
-          <div class="row align-items-start text-center">
+          <div class="row mx-2 align-items-start text-center">
             <div class="h3 col-12 card-header">Taxi orders prediction</div>
           </div>
-          <div class="row align-items-end mt-auto p-2 justify-content-center">
+          <div class="row align-items-end mt-auto p-2 justify-content-center mx-auto">
             <div id="taxi-orders-prediction" class="button-gallery-card" data-toggle="modal" data-target="#modalCenter"
               onclick=ButtonCardClick(this.id)>
               <p>more</p>
@@ -325,8 +325,8 @@
             <p id="taxi-orders-prediction-description-title">Taxi orders prediction</p>
             <p id="taxi-orders-prediction-description-text">
               Task is to build a model which will have RMSE lower than 48. <a
-              href="https://github.com/Chikitonik/taxi-orders/blob/main/12_taxi_orders.ipynb" target="_blank"> View
-              work</a> in the form iPython Notebook
+                href="https://github.com/Chikitonik/taxi-orders/blob/main/12_taxi_orders.ipynb" target="_blank"> View
+                work</a> in the form iPython Notebook
             </p>
           </div>
         </div>
@@ -335,10 +335,10 @@
       <div class="row m-0 p-0 gallery-card tablink-full-stack active hidden"
         style="background-image: url('img/projects/armtek-support.png')">
         <div class="row h-100 card-content d-flex align-items-start flex-column">
-          <div class="row align-items-start text-center">
+          <div class="row mx-2 align-items-start text-center">
             <div class="h3 col-12 card-header">Armtek online shop / SAP ERP support</div>
           </div>
-          <div class="row align-items-end mt-auto p-2 justify-content-center">
+          <div class="row align-items-end mt-auto p-2 justify-content-center mx-auto">
             <div id="armtek-support" class="button-gallery-card" data-toggle="modal" data-target="#modalCenter"
               onclick=ButtonCardClick(this.id)>
               <p>more</p>
@@ -357,10 +357,10 @@
       <div class="row m-0 p-0 gallery-card tablink-data-science active hidden"
         style="background-image: url('img/projects/toxic-comment-classification.png')">
         <div class="row h-100 card-content d-flex align-items-start flex-column">
-          <div class="row align-items-start text-center">
+          <div class="row mx-2 align-items-start text-center">
             <div class="h3 col-12 card-header">Toxic comments classification</div>
           </div>
-          <div class="row align-items-end mt-auto p-2 justify-content-center">
+          <div class="row align-items-end mt-auto p-2 justify-content-center mx-auto">
             <div id="toxic-comment-classification" class="col-12 button-gallery-card" data-toggle="modal"
               data-target="#modalCenter" onclick=ButtonCardClick(this.id)>
               <p>more</p>
@@ -380,10 +380,10 @@
       <div class="row m-0 p-0 gallery-card tablink-data-science active hidden"
         style="background-image: url('img/projects/churn-clients.png')">
         <div class="row h-100 card-content d-flex align-items-start flex-column">
-          <div class="row align-items-start text-center">
+          <div class="row mx-2 align-items-start text-center">
             <div class="h3 col-12 card-header">Churn bank clients prediction</div>
           </div>
-          <div class="row align-items-end mt-auto p-2 justify-content-center">
+          <div class="row align-items-end mt-auto p-2 justify-content-center mx-auto">
             <div id="churn-clients" class="col-12 button-gallery-card" data-toggle="modal" data-target="#modalCenter"
               onclick=ButtonCardClick(this.id)>
               <p>more</p>
@@ -399,38 +399,39 @@
           </div>
         </div>
       </div>
-            <!-- work card -->
-            <div class="row m-0 p-0 gallery-card tablink-data-science active hidden"
-            style="background-image: url('img/projects/gold-recovery.png')">
-            <div class="row h-100 card-content d-flex align-items-start flex-column">
-              <div class="row align-items-start text-center">
-                <div class="h3 col-12 card-header">Gold recovery rate prediction</div>
-              </div>
-              <div class="row align-items-end mt-auto p-2 justify-content-center">
-                <div id="gold-recovery" class="col-12 button-gallery-card" data-toggle="modal" data-target="#modalCenter"
-                  onclick=ButtonCardClick(this.id)>
-                  <p>more</p>
-                </div>
-              </div>
-              <div id="gold-recovery-description" class="d-none">
-                <p id="gold-recovery-description-title">Gold recovery rate prediction</p>
-                <p id="gold-recovery-description-text">
-                  Task is to build a model which will be predicting the gold recovery rate from gold ore. <a
-                    href="https://github.com/Chikitonik/gold-mining/blob/main/gold_mining.ipynb" target="_blank"> View
-                    work</a> in the form iPython Notebook
-                </p>
-              </div>
+      <!-- work card -->
+      <div class="row m-0 p-0 gallery-card tablink-data-science active hidden"
+        style="background-image: url('img/projects/gold-recovery.png')">
+        <div class="row h-100 card-content d-flex align-items-start flex-column">
+          <div class="row mx-2 align-items-start text-center">
+            <div class="h3 col-12 card-header">Gold recovery rate prediction</div>
+          </div>
+          <div class="row align-items-end mt-auto p-2 justify-content-center mx-auto">
+            <div id="gold-recovery" class="col-12 button-gallery-card" data-toggle="modal" data-target="#modalCenter"
+              onclick=ButtonCardClick(this.id)>
+              <p>more</p>
             </div>
           </div>
+          <div id="gold-recovery-description" class="d-none">
+            <p id="gold-recovery-description-title">Gold recovery rate prediction</p>
+            <p id="gold-recovery-description-text">
+              Task is to build a model which will be predicting the gold recovery rate from gold ore. <a
+                href="https://github.com/Chikitonik/gold-mining/blob/main/gold_mining.ipynb" target="_blank"> View
+                work</a> in the form iPython Notebook
+            </p>
+          </div>
+        </div>
+      </div>
       <!-- end works -->
     </div>
+    <!-- #endregion works -->
     <!-- modal -->
     <!-- dynamic in ButtonCardClick -->
     <div class="modal fade" id="modalCenter" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle"
       aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-body pt-md-0 pb-md-5 text-center">
+        <div class="modal-content rounded-0">
+          <div class="modal-body m-0 p-0 text-center">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -481,13 +482,16 @@
   <!-- #endregion PORTFOLIO -->
   <!-- #region CONTACT -->
   <section id="contact" class="bg-dark">
-    <div class="row bg-white">
+    <div class="row bg-light">
       <div class="h1 w-100 pt-3 mb-5 mt-5 text-center slide-from-right text-shadow hidden">
         Contact
       </div>
     </div>
     <svg preserveAspectRatio="none" viewBox="0 0 100 102" height="150" width="100%">
-      <path d="M0 0 L50 100 L100 0 Z" fill="white" stroke="white"></path>
+      <path d="M0 0 L50 100 L100 0 Z" fill="#f8f9fa" stroke="white"></path>
+      
+      <line x1="-2" y1="20" x2="50" y2="122" stroke="#f8f9fa" stroke-width="2"/>
+      <line x1="50" y1="122" x2="102" y2="20" stroke="#f8f9fa" stroke-width="2"/>
     </svg>
     <!-- get in touch using https://formspree.io -->
     <div class="col-12 mb-3 text-center">
