--- a/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-your-first-HTML-Page/index.html
+++ b/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-your-first-HTML-Page/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Cat Website</title>
 </head>
+
 <body>
-    
+    <h1>The domestic cat</h1>
+    <hr>
+    <div>Click here for more information about <a href=#lions>the lions</a></div>
+    <h2>About domestic cats</h2>
+    <div>They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish
+        them from other felids and felines. They are often valued by humans for <b>companionship</b>.</div>
+
+    <div>There are more than <span class="yellowBackground">seventy cat breeds</span> recognized by various cat registries..</div>
+
+    <div class="bold underline">Cat senses</div>
+    <ul>
+        <li>They can hear sounds too faint or too high in frequency for human ears</li>
+        <li>They can see in near darkness</li>
+        <li>They have poorer color vision and a better sense of smell than humans.</li>
+    </ul>
+
+    <h2>History</h2>
+
+    <div>Cats were venerated in ancient Egypt, but there may have been instances of domestication as early as the Neolithic
+    from around 9,500 years ago (7500 BC). Did you know that, The felids are a rapidly evolving family of mammals that
+    includes:</div>
+    <ol type="I">
+        <li>Lions</li>
+        <li>tigers</li>
+        <li>cougars</li>
+        </ol>
+
+    <h2 class="center">Media</h2>
+
+    <img class="center" src="image/cat.jpg">
+
+    <h1 ID="lions">The lions</h1>
+    <hr>
+    <div>Present in Africa and India, the lion typically inhabits grasslands and savannahs, but is absent in dense forests.
+    It is usually more diurnal than other big cats, but when persecuted adapts to being active at night and at twilight.
+    A lion pride consists of a few adult males, related females and cubs. Prides vary in size and composition from three
+    to 20 adult lions, depending on habitat and prey availability. Females cooperate when hunting and prey mostly on
+    large ungulates, including antelope, deer, buffalo, zebra and even giraffe</div>
+
+    <div class="red center border bold">The difference between Characteristics and Behavior</div>
+    <table border="1">
+        <tr>
+          <th>Characteristics</th>
+          <th>Behavior</th>
+        </tr>
+        <tr>
+          <td>The lion is a muscular, deep-chested cat with a short, rounded head, a reduced neck and round ears</td>
+          <td>Lions spend much of their time and resting, and are inactive for about 20 hours per day.</td>
+        </tr>
+      </table>
+      <img class="center" src="image/lion.jpg">
 </body>
+
 </html>
