--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 				<p>│<span class="branch">│<span class="line">── Create your first HTML Page</p>
 				<p>│<span class="branch">│<span class="branch">└─ </span><a href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-your-first-HTML-Page/index.html"
 					target="_blank">index.html</a></p>
-
+				<!-- <p>│<span class="branch">│<span class="branch">└─ </span><a
+					href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-your-first-HTML-Page/style.css" target="_blank">style.css</a></p> -->
 					
 				<div class="h5 mt-3">Self-paced Courses exercises</div>
 				<ol>
