--- a/index.html
+++ b/index.html
@@ -216,13 +216,24 @@
 					<p>│<span class="branch">│<span class="branch">└─ </span><a
 								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-a-landing-page/style.css"
 								target="_blank">style.css</a></p>
+					<p>│<span class="branch">│<span class="line">── Daily Challenge: Avengers</p>
+					<p>│<span class="branch">│<span class="branch">└─ </span><a
+								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Daily-Challenge-Avengers/index.html"
+								target="_blank">index.html</a></p>
+					<p>│<span class="branch">│<span class="branch">└─ </span><a
+								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Daily-Challenge-Avengers/style.css"
+								target="_blank">style.css</a></p>
+					<p>│<span class="branch">│<span class="branch">└─ </span><a
+								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Daily-Challenge-Avengers/main.js"
+								target="_blank">main.js</a></p>
 				</section>
 				<section id="Self-paced-Courses-exercises">
 					<div class="h5 mt-3">Self-paced Courses exercises</div>
 					<ol>
 						<li><a href="https://flukeout.github.io/#" target="_blank">CSS online game</a></li>
 						<li><a href="/DI-Bootcamp-Stage1/exercises/CSS_clock.html" target="_blank">CSS Clock</a></li>
-						<li><a href="/DI-Bootcamp-Stage1/exercises/CSS_responsive_design_1.html" target="_blank">Responsive
+						<li><a href="/DI-Bootcamp-Stage1/exercises/CSS_responsive_design_1.html"
+								target="_blank">Responsive
 								Design
 								Exercise 1</a></li>
 						<li><a href="/DI-Bootcamp-Stage1/exercises/Bootstrap_1.html" target="_blank">Bootstrap Exercise
