--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="row">
 			<div class="col-12 ml-3 alert alert-warning col-md-5">
 				<section id="DI-Bootcamp-Stage1">
-					<div class="h5 mb-0 sticky-header">DI-Bootcamp-Stage1</div>
+					<div class="h5 mb-0 sticky-header">DI-Bootcamp-Stage1 (prep)</div>
 					<p>│<span class="line">── HTML-Basics</p>
 					<p>│<span class="branch">└─ <a href="/DI-Bootcamp-Stage1/HTML-Basics/cookies-exercise.html"
 								target="_blank">cookies-exercise.html</a></p>
@@ -201,31 +201,61 @@
 				</section>
 				<section id="Full-Stack-Coding-Bootcamp-JavaScript">
 					<div class="h5 mb-0 sticky-header">Full Stack Coding Bootcamp - JavaScript</div>
-					<p>│<span class="line">──</span> Basics HTML & CSS</p>
-					<p>│<span class="branch">│<span class="line">── Create your first HTML Page</p>
-					<p>│<span class="branch">│<span class="branch">└─ </span><a
-								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-your-first-HTML-Page/index.html"
-								target="_blank">index.html</a></p>
-					<p>│<span class="branch">│<span class="branch">└─ </span><a
-								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-your-first-HTML-Page/style.css"
-								target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="line">── Create a landing page</p>
-					<p>│<span class="branch">│<span class="branch">└─ </span><a
-								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-a-landing-page/index.html"
-								target="_blank">index.html</a></p>
-					<p>│<span class="branch">│<span class="branch">└─ </span><a
-								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Create-a-landing-page/style.css"
-								target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="line">── Daily Challenge: Avengers</p>
-					<p>│<span class="branch">│<span class="branch">└─ </span><a
-								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Daily-Challenge-Avengers/index.html"
-								target="_blank">index.html</a></p>
-					<p>│<span class="branch">│<span class="branch">└─ </span><a
-								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Daily-Challenge-Avengers/style.css"
-								target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="branch">└─ </span><a
-								href="/Full-Stack-Coding-Bootcamp-JavaScript/Basics-HTML-&-CSS/Daily-Challenge-Avengers/main.js"
-								target="_blank">main.js</a></p>
+					<p>│<span class="line">──</span> Week 1 - Web development Basics</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 2</p>
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+									Exercises XP</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+									Exercises XP Gold</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day2/ExercisesXPGold/index.html" target="_blank">index.html</a>
+					</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day2/ExercisesXPGold/style.css" target="_blank">style.css</a></p>
+
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+									Daily Challenge</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day2/DailyChallenge/index.html" target="_blank">index.html</a>
+					</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day2/DailyChallenge/style.css" target="_blank">style.css</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day2/DailyChallenge/main.js" target="_blank">main.js</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 4</p>
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+									Exercises XP</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day4/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+									<!-- Exercises XP Gold</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+								<!-- </span><a href="Week1/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+								<!-- </span><a href="Week1/Day4/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+									Exercises XP Ninja</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a>
+					</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+								</span><a href="Week1/Day4/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+									<!-- Daily Challenge</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+								<!-- </span><a href="Week1/Day4/DailyChallenge/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+								<!-- </span><a href="Week1/Day4/DailyChallenge/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+								<!-- </span><a href="Week1/Day4/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
 				</section>
 				<section id="Self-paced-Courses-exercises">
 					<div class="h5 mt-3">Self-paced Courses exercises</div>
