--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
 								</span><a href="Week1/Day4/ExercisesXP/style.css" target="_blank">style.css</a></p>
 					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-									<!-- Exercises XP Gold</p> -->
+					<!-- Exercises XP Gold</p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-								<!-- </span><a href="Week1/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
 					<!-- </p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-								<!-- </span><a href="Week1/Day4/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
 					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
 									Exercises XP Ninja</p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
@@ -248,14 +248,77 @@
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
 								</span><a href="Week1/Day4/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>
 					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-									<!-- Daily Challenge</p> -->
+					<!-- Daily Challenge</p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-								<!-- </span><a href="Week1/Day4/DailyChallenge/index.html" target="_blank">index.html</a> -->
+					<!-- </span><a href="Week1/Day4/DailyChallenge/index.html" target="_blank">index.html</a> -->
 					<!-- </p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-								<!-- </span><a href="Week1/Day4/DailyChallenge/style.css" target="_blank">style.css</a></p> -->
+					<!-- </span><a href="Week1/Day4/DailyChallenge/style.css" target="_blank">style.css</a></p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-								<!-- </span><a href="Week1/Day4/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
+					<!-- </span><a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
+										<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 5</p>
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Exercises XP</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Exercises XP Gold</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day5/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day5/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Exercises XP Ninja</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day5/ExercisesXPNinja/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day5/ExercisesXPNinja/style.css" target="_blank">style.css</a></p> -->
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+					Daily Challenge</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week1/Day5/DailyChallenge/index.html" target="_blank">index.html</a>
+					</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week1/Day5/DailyChallenge/style.css" target="_blank">style.css</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p>
+
+					<!-- #region DAY example ################################################-->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="line">── Day 5</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Exercises XP</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXP/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Exercises XP Gold</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Exercises XP Ninja</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPNinja/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Daily Challenge</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/DailyChallenge/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/DailyChallenge/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
+					<!-- #endregion DAY example  ################################################-->
 				</section>
 				<section id="Self-paced-Courses-exercises">
 					<div class="h5 mt-3">Self-paced Courses exercises</div>
