--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
 					<!-- </span><a href="Week1/Day5/ExercisesXPNinja/index.html" target="_blank">index.html</a> -->
 					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/ExercisesXPNinja/style.css" target="_blank">style.css</a></p> -->
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week1/Day5/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>
 					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
 					Daily Challenge</p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
