--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
 					<!-- </p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
 					<!-- </span><a href="Week1/Day5/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP Ninja</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/ExercisesXPNinja/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+					Exercises XP Ninja</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week1/Day5/ExercisesXPNinja/index.html" target="_blank">index.html</a>
+					</p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
 					</span><a href="Week1/Day5/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>
 					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
