--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
 						</li>
 					</ol>
 				</section>
-				<script type="text/javascript"
+				<!-- <script type="text/javascript"
 					src="//rf.revolvermaps.com/0/0/6.js?i=5edwyc88ifo&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=georgia&amp;l=0"
-					async="async"></script>
+					async="async"></script> -->
 			</div>
 		</div>
 	</div>
