--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
 					<!-- </p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
 					<!-- </span><a href="Week1/Day5/ExercisesXPNinja/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-									<!-- Daily Challenge</p> -->
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+									Daily Challenge</p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
 								</span><a href="Week1/Day5/DailyChallenge/index.html" target="_blank">index.html</a>
 					</p>
