--- a/index.html
+++ b/index.html
@@ -364,13 +364,14 @@
 						</li>
 					</ol>
 				</section>
-				<!-- <script type="text/javascript"
+				<script type="text/javascript"
 					src="//rf.revolvermaps.com/0/0/6.js?i=5edwyc88ifo&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=georgia&amp;l=0"
-					async="async"></script> -->
+					async="async"></script>
 			</div>
 		</div>
 	</div>
-
+<!-- for collapse -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 	
 </body>
 
