--- a/Week1/Day5/DailyChallenge/index.html
+++ b/Week1/Day5/DailyChallenge/index.html
@@ -19,6 +19,7 @@
         </div>
     </section>
     <section class="main">
+        <div class="titleMain">ONE PUNCH MAN</div>
         <div id="mChar" class="mainText ">
             The title character, Saitama, is a bald-headed 25-year-old man who
             is bored of fighting because he is able to effortlessly defeat enemies
