--- a/index.html
+++ b/index.html
@@ -275,12 +275,14 @@
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
 					<!-- </span><a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
 					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 5</p>
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p> -->
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+					Exercises XP</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week1/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week1/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span>other files</p>
 					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
 					<!-- Exercises XP Gold</p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
@@ -370,7 +372,6 @@
 			</div>
 		</div>
 	</div>
-
 	
 </body>
 
