--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title>index</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="style.css">
-		<script type="text/javascript" src="main.js"></script>
+	<link rel="stylesheet" href="style.css">
+	<script type="text/javascript" src="main.js"></script>
 	<!-- for collapse -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -211,12 +211,12 @@
 					</p>
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
-				data-bs-target="#Full-Stack-Coding-Bootcamp-JavaScript">Full-Stack-Coding-Bootcamp-JavaScript
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-					class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
-					<path fill-rule="evenodd"
-						d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
-				</svg></button>
+					data-bs-target="#Full-Stack-Coding-Bootcamp-JavaScript">Full-Stack-Coding-Bootcamp-JavaScript
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+						class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
+						<path fill-rule="evenodd"
+							d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
+					</svg></button>
 				<section id="Full-Stack-Coding-Bootcamp-JavaScript">
 					<div class="h5 mb-0 sticky-header">Full Stack Coding Bootcamp - JavaScript</div>
 					<p>│<span class="line">──</span> Week 1 - Web development Basics</p>
@@ -276,13 +276,13 @@
 					<!-- </span><a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
 					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 5</p>
 					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-					Exercises XP</p>
+									Exercises XP</p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week1/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+								</span><a href="Week1/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week1/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
+								</span><a href="Week1/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span>other files</p>
+								</span>other files</p>
 					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
 					<!-- Exercises XP Gold</p> -->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
@@ -306,6 +306,37 @@
 								</span><a href="Week1/Day5/DailyChallenge/style.css" target="_blank">style.css</a></p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
 								</span><a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p>
+					<p>│<span class="line">──</span> Week 2 - Web development Basics</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 2</p>
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+					Exercises XP</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Exercises XP Gold</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Exercises XP Ninja</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/ExercisesXPNinja/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
+					<!-- Daily Challenge</p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/DailyChallenge/index.html" target="_blank">index.html</a> -->
+					<!-- </p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/DailyChallenge/style.css" target="_blank">style.css</a></p> -->
+					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
+					<!-- </span><a href="Week1/Day4/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
 
 					<!-- #region DAY example ################################################-->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="line">── Day 5</p> -->
@@ -343,15 +374,17 @@
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
 					data-bs-target="#Self-paced-Courses-exercises">Self-paced Courses exercises
 					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-					class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
-					<path fill-rule="evenodd"
-						d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
-				</svg>
+						class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
+						<path fill-rule="evenodd"
+							d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
+					</svg>
 				</button>
 				<section id="Self-paced-Courses-exercises" class="collapse">
 					<div class="h5 mt-3">Self-paced Courses exercises</div>
 					<ol>
-						<li><a href="https://flukeout.github.io/#" target="_blank">CSS online game</a></li>
+						<li><a href="https://flukeout.github.io/#" target="_blank">CSS selector online game</a></li>
+						<li><a href="http://www.flexboxdefense.com/" target="_blank">CSS flex online game</a></li>
+						<li><a href="https://cssgridgarden.com//" target="_blank">CSS grid online game</a></li>
 						<li><a href="/DI-Bootcamp-Stage1/exercises/CSS_clock.html" target="_blank">CSS Clock</a></li>
 						<li><a href="/DI-Bootcamp-Stage1/exercises/CSS_responsive_design_1.html"
 								target="_blank">Responsive
@@ -372,7 +405,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 </body>
 
 </html>
