--- a/index.html
+++ b/index.html
@@ -314,29 +314,32 @@
 					</span><a href="Week2/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
 					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
 					</span><a href="Week2/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP Gold</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP Ninja</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPNinja/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Daily Challenge</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/DailyChallenge/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/DailyChallenge/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+					Exercises XP Gold</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/ExercisesXPGold/index1.html" target="_blank">index1.html</a>
+					</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/ExercisesXPGold/style1.css" target="_blank">style1.css</a></p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/ExercisesXPGold/index2.html" target="_blank">index2.html</a>
+					</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/ExercisesXPGold/style2.css" target="_blank">style2.css</a></p>
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+					Exercises XP Ninja</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/ExercisesXPNinja/index.html" target="_blank">index.html</a>
+					</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>
+					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
+					Daily Challenge</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/DailyChallenge/index.html" target="_blank">index.html</a>
+					</p>
+					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
+					</span><a href="Week2/Day2/DailyChallenge/style.css" target="_blank">style.css</a></p>
 
 					<!-- #region DAY example ################################################-->
 					<!-- <p>│<span class="branch">│<span class="branch">│<span class="line">── Day 5</p> -->
